--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Hh:mm:yyyy"
+                        android:text="@string/txt_date_format_yyyy_mm_dd"
                         android:textAlignment="center"
                         android:textColor="#050505"
                         android:textSize="15sp"
@@ -91,7 +91,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:text="Hh:mm:yyyy"
+                        android:text="@string/txt_date_format_yyyy_mm_dd"
                         android:textAlignment="center"
                         android:textColor="#050505"
                         android:textSize="15sp"
